<resources>
    <string name="global_confirm">Confirm</string>
    <string name="global_confirm_question">Are you sure?</string>
    <string name="global_warning">Warning</string>
    <string name="global_cancel">Cancel</string>
    <string name="global_ok">OK</string>
    <string name="global_yes">Yes</string>
    <string name="global_no">No</string>
    <string name="removedid">Removed ID</string>
    <string name="failedtocreatefolder">Failed to create folder</string>
    <string name="app_name">Workouts\'N\'Rest</string>
    <string name="action_settings">Settings</string>
    <string name="DateLabel">Date</string>
    <string name="FunctionLabel">Display</string>
    <string name="HistoryLabel">History</string>
    <string name="GraphLabel">Graphs</string>
    <string name="AddLabel">Add</string>
    <string name="DeleteLabel">Delete</string>
    <string name="ShareLabel">Share</string>
    <string name="EditLabel">Edit</string>
    <string name="DeleteRecordDialog">Remove this record?</string>
    <string name="change">Change</string>
    <string name="run">Run</string>
    <string name="back">Back</string>
    <string name="time_set">Set time</string>
    <string name="FonteLabel">Strength</string>
    <string name="RecordLabel">Records</string>
    <string name="SerieLabel">Sets</string>
    <string name="RepetitionLabel_short">Reps</string>
    <string name="MachineLabel">Exercise</string>
    <string name="PoidsLabel">Weight</string>
    <string name="KgUnitLabel" translatable="false">Kg</string>
    <string name="LbsUnitLabel" translatable="false">Lbs</string>
    <string name="NotesLabel">Notes</string>
    <string name="TopTenLabel">Last records:</string>
    <string name="ShareText">Share</string>
    <string name="ShareTitle">Share your perf</string>
    <string name="ShareInstruction">Edit your text before sending:</string>
    <string name="ShareTextDefault">I have lifted __WEIGHT__ kg on __MACHINE__!</string>
    <string name="ShareParamWeight" translatable="false">__WEIGHT__</string>
    <string name="ShareParamMachine" translatable="false">__MACHINE__</string>
    <string name="CardioLabel">Cardio</string>
    <string name="DistanceLabel">Distance</string>
    <string name="KmUnitLabel" translatable="false">Km</string>
    <string name="MilesUnitLabel" translatable="false">Miles</string>
    <string name="DurationLabel">Duration</string>
    <string name="ExerciceLabel">Exercises</string>
    <string name="weightMenuLabel">Weight Track</string>
    <string name="weightLabel">Weight(kg)</string>
    <string name="fatLabel">Fat(%)</string>
    <string name="bonesLabel">Bones(%)</string>
    <string name="waterLabel">Water(%)</string>
    <string name="musclesLabel">Muscles(%)</string>
    <string name="measureLabel">Measure</string>
    <string name="sizeTableLabel">Measurement history:</string>
    <string name="createProfilTitle">Create new profile</string>
    <string name="profileSelected">Profile selected</string>
    <string name="createProfilQuestion">Choose your profile name?</string>
    <string name="userChanged">User changed</string>
    <string name="renameProfilTitle">Rename profile</string>
    <string name="renameProfilQuestion">Rename this profile?</string>
    <string name="SettingLabel">Settings</string>
    <string name="export_database">Export Records</string>
    <string name="export_question">Do you want to export the database of </string>
    <string name="export_success">Database exported</string>
    <string name="export_failed">Database export failed</string>
    <string name="import_database">Import Records</string>
    <string name="deleteDB_warning">
        This action will reset the entire application.
        All data will be lost.
        Are you sure?
        This will exit the application.
    </string>
    <string name="ResetAppLabel">Reset application</string>
    <string name="MachinesLabel">Exercises</string>
    <string name="pref_ui_setting">UI Settings</string>
    <string name="pref_show_mp3_player">Show MP3 Player</string>
    <string name="pref_show_mp3_player_summary">Show/hide the MP3 player toolbar</string>
    <string name="pref_preferredUnitSummary">Preferred unit:</string>
    <string name="pref_preferredUnitTitle">Select your preferred weight unit</string>
    <string name="pref_preferredDistanceUnitTitle">Select your preferred distance unit</string>
    <string name="profil_create_new">Create new profile</string>
    <string name="profil_change">Change profile</string>
    <string name="profil_select_profil">Select a profile</string>
    <string name="profil_delete">Delete a profile</string>
    <string name="profil_select_profil_to_delete">Select a profile to delete</string>
    <string name="AboutLabel">About</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string-array name="weight_units">
        <item>@string/KgUnitLabel</item>
        <item>@string/LbsUnitLabel</item>
    </string-array>
    <string-array name="fonte_unitsEnum">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="distance_units">
        <item>@string/KmUnitLabel</item>
        <item>@string/MilesUnitLabel</item>
    </string-array>
    <string-array name="distance_unitsEnum">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="maxRep1">Maximum (Reps >= 1)</string>
    <string name="maxRep5d">Maximum (Reps >= 5)</string>
    <string name="sum">Sum</string>
    <string-array name="graph_functions">
        <item>@string/maxRep1</item>
        <item>@string/maxRep5d</item>
        <item>@string/sum</item>
    </string-array>
    <string name="sumDistance">Distance</string>
    <string name="sumDuration">Duration</string>
    <string name="speed">Speed</string>
    <string-array name="graph_cardio_functions">
        <item>@string/sumDistance</item>
        <item>@string/sumDuration</item>
        <item>@string/speed</item>
    </string-array>
    <string name="maxWeightPerDuration">"Max Weight per Duration"</string>
    <string name="nbSeriesPerDate">Nb Sets per Date</string>
    <string-array name="graph_static_functions">
        <item>@string/maxWeightPerDuration</item>
        <item>@string/nbSeriesPerDate</item>
    </string-array>
    <string name="all">All</string>
    <string name="bodytracking">Body Track</string>
    <string name="selectMuscles">Select Muscles</string>
    <string name="biceps">Biceps</string>
    <string name="triceps">Triceps</string>
    <string name="pectoraux">Chest</string>
    <string name="deltoids">Deltoids</string>
    <string name="dorseaux">Back</string>
    <string name="abdominaux">Abdominals</string>
    <string name="quadriceps">Quadriceps</string>
    <string name="ischio_jambiers">Hamstrings</string>
    <string name="adducteurs">Thighs</string>
    <string name="mollets">Calves</string>
    <string name="left_arm">Left biceps</string>
    <string name="right_arm">Right biceps</string>
    <string name="neck">Neck</string>
    <string name="left_thigh">Left thigh</string>
    <string name="right_thigh">Right thigh</string>
    <string name="left_calves">Left calves</string>
    <string name="right_calves">Right calves</string>
    <string name="waist">Waist</string>
    <string name="behind">Hips</string>
    <string name="MesureHint">Enter size here</string>
    <string name="backDialog_confirm_text">Do you want to save before exiting?</string>
    <string name="deleteMachine_confirm_text">Do you want to delete this exercise? All associated records will be deleted.</string>
    <string name="deleteProgram_confirm_text">Do you want to delete this program? All associated exercise in that program will be deleted.</string>
    <string name="renameMachine_warning_text">WARNING: This exercise name already exists. Records will be merged with the other exercise.</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="graph_all">All</string>
    <string name="graph_lastyear">Last Year</string>
    <string name="graph_lastmonth">Last Month</string>
    <string name="graph_lastweek">Last Week</string>
    <string name="ChronometerLabel">Chronometer</string>
    <string name="CountdownLabel">Rest time</string>
    <string name="activate_rest_time">Activate rest countdown</string>
    <string name="rest_time">Rest time (sec)</string>
    <string name="lastRecordLabel">Last record</string>
    <string name="FilterHint">Filter by exercise name</string>
    <string name="total_weight">Total weight</string>
    <string name="total_session">Total during session</string>
    <string name="total_machine">Total on exercise</string>
    <string name="nb_serie">Nb Sets</string>
    <string name="exit">Exit</string>
    <string name="selectMachineDialogLabel">Select an existing exercise</string>
    <string name="fillNameField">Please enter your name, at least</string>
    <string name="introSlide1Title">Hello</string>
    <string name="size_cm_optional">Size in cm (optional)</string>
    <string name="create">Create</string>
    <string name="birthday_optional">Birthday (optional)</string>
    <string name="name_or_pseudo">Name / pseudonym</string>
    <string name="name_is_required">Name is required</string>
    <string name="create_a_profile">Create a profile</string>
    <string name="introSlide1Text">Welcome to Workouts\'N\'Rest! App to training fast with automatic rest count.</string>
    <string name="introSlide2Text">In training program you could easly change exercises. Exercise could also change after your defined rest.</string>
    <string name="introSlide2Title">Easily change exercises with buttons or gestures</string>
    <string name="titleSlideEssential">Go to the essential</string>
    <string name="textSlideEssential">Add program or edit existing. Then add exercise to program. Now in workout your program will run.</string>
    <string name="pressBackAgain">Click BACK again to exit</string>
    <string name="titleSlideOpenSource">It\'s open-source!</string>
    <string name="textSlideOpenSource">Propose improvements and solutions! Visit us at https://github.com/senpl/Fit-workout-fast</string>
    <string name="profileCreated">Profile created</string>
    <string name="missinginfo">Missing info</string>
    <string name="createExerciseFirst">You must create an exercise first</string>
    <string name="impossibleToDeleteProfile">Impossible to delete current profile</string>
    <string name="profileDeleted">Profile deleted</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="areyousure">Are you sure?</string>
    <string name="daynightmode_settingtitle">Select your theme (restart needed)</string>
    <string name="programs_settings">Programs Settings</string>
    <string name="playRestSound">Play rest finish sound</string>
    <string name="playRestSoundDescription">Emit sound after rest times finishes</string>
    <string name="playStaticExerciseFinishSoundDescription">Emit sound after static exercise time finished</string>
    <string name="playStaticExerciseFinishSound">Play static exercise finish sound</string>
    <string name="sound_settings">Sound Settings</string>
    <string name="nextExerciseSwitch">Next exercise after previous finish</string>
    <string name="nextExerciseSwitchDescription">When You click check done on exercises it will move to next exercise in program</string>
    <string name="swipeGesturesSwitch">Swipe gestures</string>
    <string name="swipeGesturesDescription">Allow fast change of exercises to next with swipe gesture.</string>
    <string name="chooseRestSound">Choose rest finish sound</string>
    <string name="chooseStaticSound">Choose static timer end sound</string>
    <string name="static_prepare_seconds">Static exercise prepare time always 5 sec.</string>
</resources>